comments on code

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,8 @@
+<!--
+  This is the home page of the application.
+  It is only accessible to logged in users.
+  If a user is not logged in, they will be redirected to the login page.
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
