--- a/views/login.ejs
+++ b/views/login.ejs
@@ -19,13 +19,13 @@
 </head>
 <body>
   <h1>Login</h1>
-  
+  <!-- Adding a login form with email and password-->
   <form method="POST" action="/login">
     <label for="email">Email Address:</label>
     <input type="text" id="email" name="email" required><br><br>
     <label for="password">Password:</label>
     <input type="password" id="password" name="password" required><br><br>
-    <!-- Display error message if it exists -->
+    <!-- Display error message for incorrect email or address -->
     <% if (error) { %>
       <div class="error-message"><%= error %></div>
     <% } %>
