--- a/client/anti-scatter/src/App.css
+++ b/client/anti-scatter/src/App.css
@@ -1,3 +1,15 @@
 .App {
   text-align: center;
 }
+
+.body {
+  background-color: #282c34;
+  min-width: 400px;
+  min-height: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
