--- a/client-extension/public/popup/Loggedout/loggedOut.css
+++ b/client-extension/public/popup/Loggedout/loggedOut.css
@@ -4,7 +4,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 100vh; /* Adjust the height as needed */
+    width: 300px; /* Adjust the width as needed */
+    height: 200px; /* Adjust the height as needed */
 }
 
 /* Styles for text */
@@ -33,3 +34,4 @@ button {
 button:hover {
     background-color: #0056b3; /* Change the hover background color as needed */    
 }
+
